--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@mystry/types": "^0.0.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "appcenter": "5.0.0",
+    "appcenter-analytics": "5.0.0",
+    "appcenter-crashes": "5.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-code-push": "^8.1.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1"
   },
