--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,9 @@ android {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
     namespace "com.advancedpractice"
     defaultConfig {
         applicationId "com.advancedpractice"
